crates/flowlog-build/tests/errors/planner/unknown_head_variable.dl
.decl Person(id: int32, name: string)
.decl Greeting(name: string, salutation: string)
.input Person(IO="file", filename="Person.csv", delimiter=",")
.output Greeting
Greeting(name, salutation) :- Person(id, name).
